# bots-platform

./: .gitignore  Makefile  PLAN.md  README.md  arquitectura.md  docker-compose.yml  legacy.md  pyproject.toml
.claude/agents/: advisor.md  coder.md  planner.md  researcher.md  reviewer.md
.claude/commands/: new-feature.md  research.md
.github/workflows/: ci.yml
control_plane/: Dockerfile  alembic.ini  database.py  main.py  models.py
control_plane/migrations/: env.py
control_plane/routers/: flows.py  tenant_config.py
control_plane/services/: encryption.py  flow_validator.py  tenant_config_service.py
data_plane/: Dockerfile  _process.py  config.py  cp_client.py  main.py
data_plane/connectors/: circuit_breaker.py  errors.py  registry.py
data_plane/engine/: bot.py  degradation.py  flow.py  interpreter.py  outputs.py
data_plane/ports/: channel_adapter.py  connector.py  state_store.py
flows/: peluqueria_flow.yaml  peluqueria_norte_flow.yaml
scripts/: seed_f8.py
shared/: __init__.py
shared/domain/: conversation.py  messages.py
tests/: test_bot_engine.py  test_circuit_breaker.py  test_compute_slots.py  test_connector_registry.py  test_degradation.py  test_dev_channel_endpoint.py  test_flow_api.py  test_flow_validator.py  test_google_calendar_adapter.py  test_health.py  test_http_dev_adapter.py  test_interpreter_f5a.py  test_isolation.py  test_peluqueria_flow.py  test_sqlite_state_store.py  test_tenant_config_api.py  test_webhook_endpoint.py  test_whatsapp_adapter.py
tests/configs/: dev_tenant.yaml  google_calendar_tenant.yaml.example  (+2 more)
(+23 files in other folders)
